--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.7.2",
     "worker-loader": "^2.0.0"
   },
   "description": "H5签到APP",
